Finish repository htmlcss-wp

--- a/index.html
+++ b/index.html
@@ -66,21 +66,21 @@
             <!--STRUTTURA COLONNA SINISTRA CONTENITORE FLOATS SECONDA SEZIONE-->
             <div class="float-left lateral-column left-column">
                 
-                <div id="img-left-column"></div>
+                <div class="structure-img-column img-left-column"></div>
                 <h3>Lorem</h3>
                 <p class="grey-color-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, quaerat! Architecto deleniti distinctio ipsa iure atque amet quis? Alias, provident? Mollitia sint, odio eos obcaecati quia assumenda est eligendi ipsam!</p>
             </div>
 
             <!--STRUTTURA COLONNA CENTRALE CONTENITORE FLOATS SECONDA SEZIONE-->
             <div class="float-left central-column">
-                <div id="img-center-column"></div>
+                <div class="structure-img-column img-center-column"></div>
                 <h3>Ipsum</h3>
                 <p class="grey-color-paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse cupiditate quae ullam molestiae repellat deleniti expedita eos, reprehenderit recusandae aliquam at ea quas. Eveniet, quis. Cumque animi hic voluptate doloremque!Lorem Lorem ipsum dolor sit amet, consectetur adipisicing elit. In distinctio beatae voluptate, a quae quod minus laudantium amet autem sed tempore nostrum error praesentium, incidunt quasi aspernatur pariatur perspiciatis? Dolores? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum a exercitationem sint natus praesentium recusandae hic impedit! Molestiae reprehenderit beatae nemo! Vel natus recusandae voluptatum repudiandae. Qui corporis dolorem sit.</p>
             </div>
 
             <!--STRTUTTURA COLONNA DESTRA CONTENITORE FLOATS SECONDA SEZIONE-->
             <div class="float-left lateral-column rigth-column">
-                <div id="img-right-column"></div>
+                <div class="structure-img-column img-right-column"></div>
                 <h3>Lorem</h3>
                 <p class="grey-color-paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor sint necessitatibus cum nobis accusantium magnam neque officia pariatur. Molestiae voluptatum tenetur ducimus accusantium at omnis. Sapiente labore aliquid et incidunt.</p>
             </div>
@@ -90,7 +90,7 @@
     </main>
 
     <footer>
-        
+
         <div class="footer-container">
 
             <div>Designed with <span id="heart">&hearts;</span></div>
